[gd_scene load_steps=9 format=3 uid="uid://bfactlbvcmciq"]

[ext_resource type="Script" path="res://PapersPleaseClone/Scripts/tablet.gd" id="1_6rmie"]
[ext_resource type="Texture2D" uid="uid://de5qcfia7rvia" path="res://PapersPleaseClone/Sprites/Ipad/IPad.png" id="2_j6koo"]
[ext_resource type="Theme" uid="uid://bmjbdwq5rxvvl" path="res://PapersPleaseClone/Tema/new_theme.tres" id="4_eq2nj"]
[ext_resource type="Texture2D" uid="uid://b8nwfm2i4arqv" path="res://PapersPleaseClone/Sprites/Vestuario/Camisa.png" id="5_5p1kc"]
[ext_resource type="Texture2D" uid="uid://70q06swfp72f" path="res://PapersPleaseClone/Sprites/Vestuario/Luvas.png" id="6_35gxo"]
[ext_resource type="Texture2D" uid="uid://boyuxjd203kbd" path="res://PapersPleaseClone/Sprites/Vestuario/Mask.png" id="7_asirt"]
[ext_resource type="Texture2D" uid="uid://c3n16ksdgi4wd" path="res://PapersPleaseClone/Sprites/Vestuario/Touca.png" id="8_0ueau"]
[ext_resource type="Texture2D" uid="uid://twid3y24yhfd" path="res://PapersPleaseClone/Sprites/Tutorial/setaCheia.png" id="9_ps5hy"]

[node name="Tablet" type="Node2D"]
position = Vector2(256, 144)
scale = Vector2(1, 0.909)
script = ExtResource("1_6rmie")

[node name="Tablet" type="Sprite2D" parent="."]
scale = Vector2(1.1, 1.1)
texture = ExtResource("2_j6koo")

[node name="ScrollContainerCheckBox" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(160, 184)
offset_left = -80.0
offset_top = -96.0
offset_right = 80.0
offset_bottom = 88.0
theme = ExtResource("4_eq2nj")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainerCheckBox"]
layout_mode = 2
theme = ExtResource("4_eq2nj")

[node name="CheckBox1" type="CheckBox" parent="ScrollContainerCheckBox/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_eq2nj")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.784314, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Touca Limpa"

[node name="CheckBox2" type="CheckBox" parent="ScrollContainerCheckBox/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_eq2nj")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.784314, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Luvas Limpas"

[node name="CheckBox3" type="CheckBox" parent="ScrollContainerCheckBox/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_eq2nj")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.784314, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Roupas Limpas"

[node name="CheckBox4" type="CheckBox" parent="ScrollContainerCheckBox/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_eq2nj")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.784314, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Mascara Limpa"

[node name="ScrollContainerConteudo" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(160, 184)
offset_left = -80.0
offset_top = -96.0
offset_right = 80.0
offset_bottom = 88.0
theme = ExtResource("4_eq2nj")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainerConteudo"]
layout_mode = 2
theme = ExtResource("4_eq2nj")
alignment = 1

[node name="Label" type="Label" parent="ScrollContainerConteudo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Camisa Adequada"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScrollContainerConteudo/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_5p1kc")

[node name="Label2" type="Label" parent="ScrollContainerConteudo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Luva Adequada
"

[node name="TextureRect2" type="TextureRect" parent="ScrollContainerConteudo/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("6_35gxo")

[node name="Label3" type="Label" parent="ScrollContainerConteudo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "MÃ¡scara Adequada"

[node name="TextureRect3" type="TextureRect" parent="ScrollContainerConteudo/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("7_asirt")

[node name="Label4" type="Label" parent="ScrollContainerConteudo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Touca Adequada"

[node name="TextureRect4" type="TextureRect" parent="ScrollContainerConteudo/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("8_0ueau")

[node name="TextureButtonEsquerda" type="TextureButton" parent="."]
offset_left = -82.0
offset_top = 80.308
offset_right = -50.0
offset_bottom = 112.308
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("9_ps5hy")
texture_pressed = ExtResource("9_ps5hy")
texture_hover = ExtResource("9_ps5hy")
stretch_mode = 0
flip_h = true

[node name="TextureButtonDireita" type="TextureButton" parent="."]
offset_left = 52.0
offset_top = 80.308
offset_right = 84.0
offset_bottom = 112.308
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("9_ps5hy")
texture_pressed = ExtResource("9_ps5hy")
texture_hover = ExtResource("9_ps5hy")
stretch_mode = 0

[connection signal="pressed" from="TextureButtonEsquerda" to="." method="_on_texture_button_esquerda_pressed"]
[connection signal="pressed" from="TextureButtonDireita" to="." method="_on_texture_button_direita_pressed"]
